kubernetes/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ansible-cicd-service
  namespace: staging
  labels:
    app: ansible-cicd
    environment: staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: ansible-cicd
    environment: staging
